--- a/playpart.html
+++ b/playpart.html
@@ -15,10 +15,10 @@
         <h5 class="peter">Peter Stockmann.</h5>
         <p class="speech">Quite right; you were perfectly right, Mr. Hovstad.</p>
         <h5 class="Hovstad">Hovstad</h5>
-        <p class="direction">[Goes into the dining-room.]</p>
+        <p class="direction">[coming forward into the sitting-room.]</p>
         <p class="speech">Yes, Thomas is really indefatigable when it is a question of
             the Baths.</p>
-        <p class="direction">[lowering his voice a little.]</p>
+        <p class="direction">[la little embarrassed.]</p>
         <p class="speech">What is it?</p>
         <h5 class="peter">Peter Stockmann.</h5>
         <p class="speech">Well remember, he is the Medical Officer to the Baths.</p>
@@ -69,9 +69,19 @@
             </tr>
           </tbody>
         </table>
-       
+        <a href="secondact.html">Secondact page</a>
       </div>
-
+      <div class="bonus">
+        <h3>Bonus: Navbar</h3>
+        <nav>
+          <div>
+            <img src="Act1.jpg" alt="drama" />
+            <a href="playpart.html">Play part</a>
+          </div>
+          <div>
+            <img src="Act2.jpg" alt="drama" />
+            <a href="secondact.html">Extra page</a>
+          </div>
         </nav>
       </div>
     </main>
