--- a/playpart.html
+++ b/playpart.html
@@ -80,7 +80,7 @@
           </div>
           <div>
             <img src="Act2.jpg" alt="drama" />
-            <a href="secondact.html">Extra page</a>
+            <a href="secondact.html">Secondact page</a>
           </div>
         </nav>
       </div>
